--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME='Laravel 7 Exercises'
 APP_ENV=local
 APP_KEY=base64:QoSD1bCMXHUV9PhL7WlB/bsIzWlY8aYVPF5T7adsbZ8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
